--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  background-color: cornflowerblue;
+  background-color: rgb(255, 255, 255);
   height: 100vh;
 }
 
